final commit - fixed spacing on benefits panel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/* <header> styles start */
+/* <header> STYLES START */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -48,7 +48,7 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-/* end <header> styles */
+/* END <header> STYLES */
 
 /* apply styles to <a> */
 a {
@@ -61,7 +61,7 @@ p {
     font-size: 16px;
 }
 
-/* start hero styles */
+/* START HERO STYLES */
 .hero {
     height: 800px;
     width: 100%;
@@ -70,21 +70,20 @@ p {
     background-size: cover;
     background-position: center;
 }
-/* end hero styles */
+/* END HERO STYLES */
 
-/* apply style to content section */
+/* START CONTENT SECTION STYLES */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-/* content section images styling */
 .content img {
     max-height: 200px;
 }
 
-.content-text {
+.content-panel {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -93,11 +92,11 @@ p {
     color: #ffffff;
 }
 
-.content-text h2 {
+.content-panel h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* end content section styles */
+/* END CONTENT SECTION STYLES */
 
 /* apply style to left-floated elements */
 .float-left {
@@ -111,7 +110,7 @@ p {
     margin-left: 25px;
 }
 
-/* apply style to benefits side panel */
+/* START BENEFITS SIDE PANEL STYLES */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -121,21 +120,23 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+}
+
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
-.benefits h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/* end benefits side panel styles */
+/* END BENEFITS SIDE PANEL STYLES */
 
 /* apply styles to <footer> */
 footer {
